@@ -2,6 +2,8 @@ Revision history for Hailo
 
 {{$NEXT}}
 
+    - Match email addresses and don't capitalize them
+
 0.59 2010-10-23 21:20:22
 
     - Word tokenizer: Match combining characters in words on Perl >=5.12
